--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,11 @@ requires-python = ">=3.12"
 dependencies = [
     "jupyter>=1.1.1",
     "langchain>=1.1.0",
+    "matplotlib>=3.10.7",
+    "numpy>=2.3.5",
     "pandas>=2.3.3",
     "plotly>=6.5.0",
+    "scikit-learn>=1.7.2",
     "streamlit>=1.52.0",
 ]
 
