--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "gradio>=6.0.2",
     "jupyter>=1.1.1",
     "langchain>=1.1.0",
+    "langchain-anthropic>=1.2.0",
+    "langchain-google-genai>=3.2.0",
+    "langchain-openai>=1.1.0",
     "matplotlib>=3.10.7",
     "numpy>=2.3.5",
     "pandas>=2.3.3",
